syntax = "proto3";


import "WscoreCommon.proto";

option java_multiple_files = true;
option java_package = "com.gx.wisestone.core.grpc.lib.generalinformation";
option java_outer_classname = "GeneralInformationServiceProto";
package com.gx.wisestone.core.grpc;


service GeneralInformationService {
    // 查询天气信息
    rpc getWeatherInfo(WeatherRequest) returns (WeatherInformationResponse) {

    }

}

// 天气信息响应
message WeatherInformationResponse {
    // 返回码
    int32 code = 1;

    // 返回消息
    string msg = 2;

    // 响应数据
    WeatherResponse data = 3;
}

// 天气信息
message WeatherResponse {
    // 国家
    string country = 1;
    // 城市
    string city = 2;
    // 日期
    string date = 3;
    // 更新日期
    string update_time = 4;
    // 天气
    string weather = 5;
    // 温度
    string tem = 6;
    // 最低温度
    string tem_min = 7;
    // 最高温度
    string tem_max = 8;
    // 风向
    string win = 9;
    // 风速
    string win_speed = 10;
    // 风速（km/h）
    string win_meter = 11;
    // 湿度
    string humidity = 12;
    // 空气
    string air = 13;
    // pm2.5
    string air_pm25 = 14;
    // 空气质量等级
    string air_level = 15;
    // 空气质量tips
    string air_tips = 16;
}

// 天气信息请求
message WeatherRequest {
    // 省
    string province = 1;
    // 市
    string city = 2;
    // 区
    string area = 3;
}
